feat: add reordering UI entry

--- a/docs/changelog/5.4.0.mdx
+++ b/docs/changelog/5.4.0.mdx
@@ -6,21 +6,24 @@ keywords: ["webiny", "version", "5.4.0", "changelog"]
 description: See what's new in Webiny version 5.4.0.
 ---
 
+import CenteredImage from "../mdxComponents/centeredImage";
+import reorderingUi from "./5.4.0/reorder-ui.gif";
+import reorderButton from "./5.4.0/reorder-button.svg";
+
 # Changes
 
 This document highlights the most important fixes, improvements, and features, that were introduced in Webiny `5.4.0`.
 
 ## Headless CMS
 
-### Introduced Something
+### Reference Field - Added Item Reordering Control
 
-Description here.
+The reference field can be used to reference one or more published content entries. But, up until now, once multiple entries were picked, there wasn't a way to reorder them.
 
-## Webiny CLI
+This is now possible with the new reorder button (<svg style={{ verticalAlign: "middle"}} xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000"><path d="M0 0h24v24H0z" fill="none"/><path d="M3 15h18v-2H3v2zm0 4h18v-2H3v2zm0-8h18V9H3v2zm0-6v2h18V5H3z"/></svg>), located on the left side of each item in the list of all entries. Once clicked, a simple number input will be shown, into which a new order number of the active entry is typed. To complete the reordering, you can either press **Enter** to confirm the new order, or **Escape** to cancel.
 
-### Introduced New `xyz` Command
+<CenteredImage alt="Reference Field - Added Item Reordering Control" src={reorderingUi} />
 
-Description here.
 
 # How To Upgrade
 
