feat: update changelog

--- a/docs/changelog/5.4.0.mdx
+++ b/docs/changelog/5.4.0.mdx
@@ -24,6 +24,31 @@ This is now possible with the new reorder button (<svg style={{ verticalAlign: "
 
 <CenteredImage alt="Reference Field - Added Item Reordering Control" src={reorderingUi} />
 
+## Other
+
+### Improved Deployment Process for the Website Project Application
+
+We are introducing a couple of improvements to the way we deploy the **Website** project application.
+
+#### No More Broken Pre-rendered Pages
+
+Prior to this release, deploying a new production build of your **Website** React application would replace all static assets (JS, CSS, images) that were uploaded as part of the previous deployment. This means that all of the pre-rendered pages would immediately become broken, as static assets, to which they were linking to, don't exist anymore.
+
+With this release, all of the static assets that you upload as part of the **Website** deployment process won't have any affect on the previously uploaded files, meaning, all of the pre-rendered pages will still work correctly.
+
+:::info
+Learn more about the **Website** project application on the cloud infrastructure level in the [Cloud Infrastructure](/docs/key-topics/cloud-infrastructure/website/introduction) key topics section.
+:::
+
+#### Re-rendering the Complete Website on New Deployments
+
+Another issue we address in this release is having stale pages (old code) - even after a new deployment of the Website project application was just performed.
+
+The reason behind this is that, although a new production build has just been uploaded, nothing actually happened with all of the previously pre-rendered pages. So, for example, if we made a small change to the way our website's main menu behaves, we wouldn't be able to see the change on any page, until something triggered its re-render (for example - publishing a new page revision).
+
+So, from now on, after the **Website** project application's React application has been successfully deployed, a separate background process will be triggered, that will ensure all of the existing pages are re-rendered.
+
+Once successfully deployed, please note that it can take a couple of minutes for the website to be fully updated. This is mainly because of the Amazon Cloudfront and its caching settings.
 
 # How To Upgrade
 
