feat: create changelog and upgrade guide

--- a/docs/changelog/5.4.0.mdx
+++ b/docs/changelog/5.4.0.mdx
@@ -14,6 +14,11 @@ import reorderButton from "./5.4.0/reorder-button.svg";
 
 This document highlights the most important fixes, improvements, and features, that were introduced in Webiny `5.4.0`.
 
+
+:::info How To Upgrade?
+Please check the [Webiny 5.4.0 migration guide](/docs/how-to-guides/upgrade-webiny/5.3.0-to-5.4.0) for the upgrade steps.
+:::
+
 ## Headless CMS
 
 ### Reference Field - Added Item Reordering Control
@@ -49,12 +54,3 @@ The reason behind this is that, although a new production build has just been up
 So, from now on, after the **Website** project application's React application has been successfully deployed, a separate background process will be triggered, that will ensure all of the existing pages are re-rendered.
 
 Once successfully deployed, please note that it can take a couple of minutes for the website to be fully updated. This is mainly because of the Amazon Cloudfront and its caching settings.
-
-# How To Upgrade
-
-If you are already using Webiny version 5.3.x, then there are no special migration steps that need to be taken. So, when ready to upgrade, in your terminal of choice, simply run the following commands:
-
-- `yarn up "@webiny/*@5.4.0"`
-- `yarn webiny deploy`
-
-On the other hand, if you’re coming from an older version of Webiny, before upgrading, make sure to check our [How To Upgrade](/docs/how-to-guides/upgrade-webiny/overview) guide.
