fix: add PR links

--- a/docs/changelog/5.4.0.mdx
+++ b/docs/changelog/5.4.0.mdx
@@ -21,7 +21,7 @@ Please check the [Webiny 5.4.0 migration guide](/docs/how-to-guides/upgrade-webi
 
 ## Headless CMS
 
-### Reference Field - Added Item Reordering Control
+### Reference Field - Added Item Reordering Control ([#1555](https://github.com/webiny/webiny-js/pull/1555))
 
 The reference field can be used to reference one or more published content entries. But, up until now, once multiple entries were picked, there wasn't a way to reorder them.
 
@@ -31,7 +31,7 @@ This is now possible with the new reorder button (<svg style={{ verticalAlign: "
 
 ## Other
 
-### Improved Deployment Process for the Website Project Application
+### Improved Deployment Process for the Website Project Application ([#1557](https://github.com/webiny/webiny-js/pull/1557))
 
 We are introducing a couple of improvements to the way we deploy the **Website** project application.
 
