--- a/docs/how-to-guides/deployment/destroy-cloud-infrastructure.mdx
+++ b/docs/how-to-guides/deployment/destroy-cloud-infrastructure.mdx
@@ -28,7 +28,7 @@ Although this may seem as a convenient way to get rid of everything that was pre
 The `destroy` command destroys the cloud infrastructure that was deployed into the `dev` environment by default. You can specify a different environment with the `--env` argument. For example, to destroy cloud infrastructure that was deployed into the `prod` environment, you can run the following command:
 
 ```
-yarn webiny destroy --env prod
+yarn webiny app destroy --env prod
 ```
 -->
 
@@ -43,9 +43,9 @@ As its first argument, the `destroy` command receives the path to the project ap
 The following destroy commands destroy cloud infrastructure deployed for three project applications, all previously deployed into the `dev` environment:
 
 ```
-yarn webiny destroy api --env dev
-yarn webiny destroy apps/admin --env dev
-yarn webiny destroy apps/website --env dev
+yarn webiny app destroy api --env dev
+yarn webiny app destroy apps/admin --env dev
+yarn webiny app destroy apps/website --env dev
 ```
 
 ## Troubleshooting
