--- a/docs/key-topics/theme/introduction.mdx
+++ b/docs/key-topics/theme/introduction.mdx
@@ -10,17 +10,15 @@ description: In this article, we'll learn about the theme
 
 :::tip What You’ll Learn
 - what is a theme
-- how a theme is used in Webiny apps
+- how a theme is used in Webiny applications
 - how to register a theme
 :::
 
 ## Overview
 
-In this section, you learn all about the Webiny theme and its basic concepts. You get all the knowledge needed to create your own theme.
-
 Styling is one of the more important tasks you might want to do on a website. The theme passes on the visual identity of your brand and ensures a uniform presentation across all the channels.
 
-Webiny apps, like `Page Builder` and `Form Builder`, support themes and layouts to control the visual presentation of your content. These are implemented as plugins in the [`theme`](https://github.com/webiny/webiny-js/tree/next/apps/theme) package.
+Webiny applications, like `Page Builder` and `Form Builder`, support themes and layouts to control the visual presentation of your content. These are implemented as plugins in the [`theme`](https://github.com/webiny/webiny-js/tree/next/apps/theme) package.
 
 There are a few main things you need to understand about Webiny themes. This article will cover these basics concepts.
 
@@ -32,14 +30,14 @@ With this approach each time you install a new app or a plugin, it automatically
 
 You have to understand that Webiny is not your basic blogging platform, Webiny is a serverless application framework upon which powerful serverless applications can be built. Those applications might have complex theme requirements. So instead of you going through dozens of files and pasting numerous code snippets in your existing theme, just to get the new app working, this one-theme-per-app concept removes that complexity since every app automatically ships with its own theme package.
 
-As a benefit, each time you update Webiny, or one of its apps or, plugins, you don't need to go through a nerve-racking, nail-biting process of "hoping" that your website will work after the update.
-Because each app update automatically updates the theme just for that app you don't need to worry that there will be incompatibilities between apps on the theme side which cause the website to break.
+As a benefit, each time you update Webiny, or one of its applications or, plugins, you don't need to go through a nerve-racking, nail-biting process of "hoping" that your website will work after the update.
+Because each app update automatically updates the theme just for that app you don't need to worry that there will be incompatibilities between applications on the theme side which cause the website to break.
 
 ## Registering a Theme
 
-Each `theme` in Webiny is also a plugin in itself. This means you register it as any other plugin in your apps.
+Each theme in Webiny is also a plugin in itself. This means you register it as any other plugin in your applications.
 
-If you open [`apps/admin/code/src/plugins/index.ts`](https://github.com/webiny/webiny-js/blob/next/apps/admin/code/src/plugins/index.ts#L13), in your Webiny project, you notice that we `import` the `theme` from its own package, and then register it as a plugin as shown below:
+If you open [`apps/admin/code/src/plugins/index.ts`](https://github.com/webiny/webiny-js/blob/next/applications/admin/code/src/plugins/index.ts#L13), in your Webiny project, you notice that say we import the theme styles from the `theme` package as shown below:
 
 ```ts
 // Some code is removed for the sake of brevity.
