fix: add Headless CMS bug fix entry

--- a/docs/changelog/5.4.0.mdx
+++ b/docs/changelog/5.4.0.mdx
@@ -29,6 +29,14 @@ This is now possible with the new reorder button (<svg style={{ verticalAlign: "
 
 <CenteredImage alt="Reference Field - Added Item Reordering Control" src={reorderingUi} />
 
+### Fixed Data Filtering Issue on the Headless CMS GraphQL API
+
+In a couple of different scenarios, performing data filtering on boolean and number fields would return incorrect results. This has now been resolved, so, once you upgrade, you should be able to perform queries using these field types.
+
+:::info Headless CMS GraphQL API
+Learn more about the Headless CMS GraphQL API in the [Headless CMS GraphQL API](/docs/key-topics/webiny-applications/headless-cms/graphql-api) key topic.
+:::
+
 ## Other
 
 ### Improved Deployment Process for the Website Project Application ([#1557](https://github.com/webiny/webiny-js/pull/1557))
@@ -47,10 +55,10 @@ Learn more about the **Website** project application on the cloud infrastructure
 
 #### Re-rendering the Complete Website on New Deployments
 
-Another issue we address in this release is having stale pages (old code) - even after a new deployment of the Website project application was just performed.
+Another issue we address in this release is having stale pages (old code) - even after a new deployment of the **Website** project application was just performed.
 
 The reason behind this is that, although a new production build has just been uploaded, nothing actually happened with all of the previously pre-rendered pages. So, for example, if we made a small change to the way our website's main menu behaves, we wouldn't be able to see the change on any page, until something triggered its re-render (for example - publishing a new page revision).
 
 So, from now on, after the **Website** project application's React application has been successfully deployed, a separate background process will be triggered, that will ensure all of the existing pages are re-rendered.
 
-Once successfully deployed, please note that it can take a couple of minutes for the website to be fully updated. This is mainly because of the Amazon Cloudfront and its caching settings.
+Once successfully deployed, please note that it can take a couple of minutes for the website to be fully updated. This is mainly because of the [Amazon Cloudfront](https://aws.amazon.com/cloudfront/) and its caching settings.
