fix: update as per feedback

--- a/docs/key-topics/theme/page-builder/elements.mdx
+++ b/docs/key-topics/theme/page-builder/elements.mdx
@@ -34,7 +34,8 @@ It defines certain attributes for Page Builder elements that you can insert into
 For example:
 
 ```ts title="apps/theme/pageBuilder/index.ts"
-//..
+(...)
+
 {
   elements: {
     button: {
@@ -68,7 +69,8 @@ For example:
     }
   }
 }
-//..
+
+(...)
 ```
 
 Currently, only the following elements support this, for example:
@@ -82,7 +84,7 @@ But the point is that if you create a custom component for Page Builder, you can
 
 The definition takes two keys:
 
-- `className`: Name of the `CSS` class that gets appended to that element.
+- `className`: Name of the CSS class that gets appended to that element.
 - `label`: This is what's shown in the dropdown when a user is selecting a style.
 
 <!-- vale off -->
@@ -115,7 +117,8 @@ We achieve this in two steps:
 Make the following change in [`apps/theme/pageBuilder/index.ts`](https://github.com/webiny/webiny-js/blob/next/apps/theme/pageBuilder/index.ts#L21) file:
 
 ```ts {11} title="apps/theme/pageBuilder/index.ts"
-//..
+(...)
+
   elements: {
     button: {
         types: [
@@ -129,7 +132,8 @@ Make the following change in [`apps/theme/pageBuilder/index.ts`](https://github.
         ]
     },
     // More elements
-//..
+
+(...)
 ```
 
 ### Add Styles
@@ -137,7 +141,7 @@ Make the following changes in [`apps/theme/pageBuilder/styles/elements/button.sc
 
 ```scss title="apps/theme/pageBuilder/styles/elements/button.scss"
 // Some code is removed for the sake of brevity.
-
+(...)
 // Style definitation for "Playful" button type
 @mixin button-playful {
   display:inline-block;
@@ -180,7 +184,8 @@ Make the following changes in [`apps/theme/pageBuilder/styles/elements/button.sc
     @include button-playful();
   }
 }
-//..
+
+(...)
 ```
 With these changes in place, the `button` element gets a new type available to use in the Page Builder editor as shown below:
 <!-- vale off -->
