--- a/docs/key-topics/theme/page-builder/introduction.mdx
+++ b/docs/key-topics/theme/page-builder/introduction.mdx
@@ -10,36 +10,31 @@ description: In this article, we'll learn about the Form Builder theme
 
 :::tip What You’ll Learn
 
-- what is Page Builder theme consists
+- what is the Page Builder theme consist of
 - what plugins are used in Page Builder theme
 :::
-
-## Overview
-
-This section covers the main configuration file for the Page Builder theme and all the related plugins.
-The goal of this article is to help you get familiar with the Page Builder theme so that you can customize it as per your need.
 
 ## Configuration File
 
 The main configuration file for the Page Builder theme is located at: [`apps/theme/pageBuilder/index.ts`](https://github.com/webiny/webiny-js/blob/next/apps/theme/pageBuilder/index.ts).
-This file exports a list of Page Builder theme plugins, and that's what you later import in your [`website`](https://github.com/webiny/webiny-js/blob/next/apps/website/code/src/plugins/index.ts#L6) app and then register as a plugin.
+This file exports a list of Page Builder theme plugins, and that's what you later import in your [**website**](https://github.com/webiny/webiny-js/blob/next/apps/website/code/src/plugins/index.ts#L6) app and then register as a plugin.
 
 The configuration file is structured in several sections like so:
 
-```ts
+```ts title="apps/theme/pageBuilder/index.ts"
 [
-    // main theme plugin containing the theme definition
+    // Main theme plugin containing the theme definition.
     {
-        name: "pb-theme-default"            // name of your theme
-        type: `pb-theme`                    // plugin type
-        theme: {}                           // theme definition
+        name: "pb-theme-default"            // Name of your theme.
+        type: `pb-theme`                    // Plugin type.
+        theme: {}                           // Theme definition.
     } as PbThemePlugin,
 
-    // register a layout ... you can register multiple layouts inside a single theme
+    // Register a layout ... you can register multiple layouts inside a single theme.
     {
-        name: "pb-page-layout-static"       // name of the page layout
-        type: "pb-page-layout",             // plugin type
-        layout: {}                          // layout definition
+        name: "pb-page-layout-static"       // Name of the page layout.
+        type: "pb-page-layout",             // Plugin type.
+        layout: {}                          // Layout definition.
     } as PbPageLayoutPlugin
 ]
 ```
@@ -49,12 +44,12 @@ Let's discuss them in detail in the next section.
 
 ## Page Builder Theme Plugins
 
-### [`pb-theme`](/docs/references/page-builder/plugins#pb-theme) plugin
+### [`pb-theme`](/docs/references/page-builder/plugins#pb-theme) Plugin
 
 This is the plugin that registers the actual theme, together with several other elements.
-In full a `pb-theme` plugin contains the following elements:
+It contains the following elements:
 
-```ts
+```ts title="apps/theme/pageBuilder/index.ts"
 {
         name: "pb-theme-default",
         type: "pb-theme",
@@ -74,7 +69,7 @@ In full a `pb-theme` plugin contains the following elements:
                 }
             }
         }
-    } as PbThemePlugin
+    }
 ```
 
 Learn more about the specific theme components:
@@ -82,14 +77,16 @@ Learn more about the specific theme components:
 - [colors](/docs/key-topics/theme/page-builder/colors)
 - [elements](/docs/key-topics/theme/page-builder/elements)
 
-### [`pb-page-layout`](/docs/references/page-builder/plugins#pb-page-layout) plugin
-
+### [`pb-page-layout`](/docs/references/page-builder/plugins#pb-page-layout) Plugin
+<!-- TODO: Expand on what is a layout. Say that for example, you might have two layouts.. one with the main menu, the other one with a main menu and additional banner.. or maybe even better.. one layout where the page is rendered in two-columned, the other in three columned layout. -->
 The layout plugin is used to register layouts. Layouts are used to render the page content.
 Here is an example of how to register a layout:
 
-```ts
+```ts title="apps/theme/pageBuilder/index.ts"
 import StaticLayout from "./layouts/Static";
-//...
+
+(...)
+
 {
     name: "pb-page-layout-static",
     type: "pb-page-layout",
@@ -112,10 +109,11 @@ It's also quite easy to register a new layout into the default theme:
 
 ```js title="apps/admin/code/src/plugins/index.ts"
 // Some code is removed for the sake of brevity.
+import { plugins } from "@webiny/plugins";
 import CustomLayout from "../custom-layout";
 
 plugins.register([
-  //..
+  // (...)
   {
     name: "pb-page-layout-my-custom-layout",
     type: "pb-page-layout",
@@ -125,12 +123,12 @@ plugins.register([
       component: CustomLayout
     }
   }
-  //..
+  // (...)
 ]);
 ```
 
-After saving the change, your newly registered layout appear in the app as shown below:
-
+After saving the change, your newly registered layout should appear in the Categories form, in the Page Builder application as shown below:
+<!-- TODO: Replace image with a screenshot on a smaller screen size. -->
 <!-- vale off -->
 
 <img
@@ -142,7 +140,7 @@ After saving the change, your newly registered layout appear in the app as shown
 <!-- vale on -->
 
 :::info
-Layouts link to page categories. When you create a page category, say "Blog", you need to select a layout inside which that content display. 
+Layouts link to page categories. When you create a page category, say "Blog", you need to select a layout inside which that content display.
 
 Each page created inside the "Blog" category, by default, use that layout. However, inside the page settings, you can overwrite that on a per-page basis if you need to.
 :::
