--- a/docs/key-topics/theme/page-builder/layouts.mdx
+++ b/docs/key-topics/theme/page-builder/layouts.mdx
@@ -24,7 +24,7 @@ The most used layouts consist of three parts:
 - footer at the very bottom containing various information about the website
 
 ## Using Layout in Page Builder
-`layouts` are linked to page categories. When you create a page category, say "Blog", you need to select a layout inside which that content will be displayed.
+Layouts are linked to page categories. When you create a page category, say "Blog", you need to select a layout inside which that content will be displayed.
 The options available inside the layout dropdown are registered by the [`pb-page-layout`](/docs/references/page-builder/plugins#pb-page-layout) plugin.
 
 Each page created inside the "Blog" category, by default, use that layout.
@@ -71,7 +71,7 @@ export default Static;
 As you can see from the example above, we simply render a `Header`, `Footer`, and page content in between.
 
 If you are creating your own layout, the structure is all up to you.
-You can insert any `DOM` structure with any custom `CSS` classes you require. You can also import and use pretty much any 3rd party NPM library here.
+You can insert any `DOM` structure with any custom CSS classes you require. You can also import and use pretty much any 3rd party NPM library here.
 
 ## Create Custom Layout
 Now that we know what is a layout and what are its internals.
@@ -115,10 +115,10 @@ export default [
         type: "pb-theme",
         theme: {
             colors: {
-                //..
+                //(...)
             },
             elements: {
-               //..
+               //(...)
             }
         }
     } as PbThemePlugin,
