--- a/docs/key-topics/theme/page-builder/colors.mdx
+++ b/docs/key-topics/theme/page-builder/colors.mdx
@@ -16,14 +16,14 @@ description: Page Builder Theme - Colors
 
 ## Overview
 
-The colors used throughout the theme and Page Builder pages are extracted as variables and presented as color presets in the page editor.
+The colors used throughout the theme and Page Builder pages are extracted as variables and presented as color presets in the Page Builder editor.
 
 This ensures a visual consistency between the theme and user-created content.
 
 ## Color Definition
 
-Colors are defined in the `color` section of the [`pb-theme`](/docs/references/page-builder/plugins#pb-theme) plugin.
-As a general practice, don't define `HEX` or `RGB` colors directly, but reference them as a `CSS` variable, like the following example:
+Colors are defined in the `colors` section of the [`pb-theme`](/docs/references/page-builder/plugins#pb-theme) plugin.
+As a general practice, don't define HEX or RGB colors directly, but reference them as a `CSS` variable, like the following example:
 
 ```json title="apps/theme/pageBuilder/index.ts"
 {
@@ -38,7 +38,7 @@ As a general practice, don't define `HEX` or `RGB` colors directly, but referenc
 ```
 
 :::info
-Defining them as `CSS` variable is important because when you select a color in the Page Builder editor for a certain element property, be that:
+Defining colors as `CSS` variable is important because when you select a color in the Page Builder editor for a certain element property, be that:
 
 - `background-color`
 - `border-color`
@@ -52,30 +52,29 @@ On the other hand, if we stored `HEX` or `RGB` values, all the existing content 
 
 You can add as many colors as you want, and name them whatever best fits your requirements. Make sure to have the actual color definitions somewhere inside your theme stylesheet.
 
-:::info
+### Prefix CSS Variables
 We also recommend that all the color variables have a prefix `--webiny-theme-color-{name}`.
 
 The reason for this is that your website theme and its stylesheets are imported into the Page Builder inside the admin interface. Using this prefix we ensure that there are no clashes between the style names of your website and Webiny administration.
-:::
+
 
 The reason why we import the website theme into the administration is that inside the Page Builder we want to show you how your page looks like when a user is browsing your website, and that is only possible if we have the same stylesheets as your website.
 
-## SaaS Variables
+## Saas Variables
 
-Webiny themes use Sass variables, and all the colors are also mapped to `CSS` variables for ease of use and to enable better
+Webiny themes use Sass variables, and all the colors are also mapped to CSS variables for ease of use and to enable better
 style inheritance. <!-- Add the link to style inheritance article -->
 If you open the [variables.scss](https://github.com/webiny/webiny-js/blob/next/apps/theme/pageBuilder/styles/variables.scss) file you'll find the default definitions inside.
 
 
 ## Update the Theme Colors
 
-Let's update the theme colors by updating the `Sass` variables.
-Make the following changes in the [variables.scss](https://github.com/webiny/webiny-js/blob/next/apps/theme/pageBuilder/styles/variables.scss) file:
+As an example, updating the following colors in the [variables.scss](https://github.com/webiny/webiny-js/blob/next/apps/theme/pageBuilder/styles/variables.scss)
+file would result in a different value of primary and secondary colors as shown below:
 
 ```scss {5-6} title="apps/theme/pageBuilder/styles/variables.scss"
-//...
 // Some code is removed for the sake of brevity.
-
+(...)
 // colors
 $webiny-pb-theme-primary: #77A6F7 !default;
 $webiny-pb-theme-secondary: #00887A !default;
@@ -91,7 +90,7 @@ $webiny-pb-theme-color-border: #e8ebee !default;
 
 //...
 ```
-After making these changes the Page Builder elements reflect the updated colors as shown below:
+After making these changes the Page Builder elements reflect the updated primary and secondary colors as shown below:
 <!-- vale off -->
 
 <img
