fix: add a note about ES pricing

--- a/docs/tutorials/install-webiny.mdx
+++ b/docs/tutorials/install-webiny.mdx
@@ -6,13 +6,18 @@ keywords: ["webiny", "project", "install", "setup", "create"]
 description: Learn how to create a new Webiny project and deploy it into your AWS account.
 ---
 
-import Theme from "../mdxComponents/theme";
-import { Box, Button, Grid, Link } from "theme-ui";
 import { isWindows } from "react-device-detect";
 
 :::tip WHAT YOU’LL LEARN
 - how to create a brand new Webiny project
 - how to deploy it to your [AWS](https://aws.amazon.com/) account
+:::
+
+:::danger AWS RESOURCES ARE NOT FREE!
+Although Webiny is mainly using serverless resources, it relies on **AWS ElasticsearchService**.
+It is the only non-serverless component of our infrastructure and is charged per hour. It amounts to roughly $25/month.
+
+Please keep this in mind, and if you just want to try Webiny, don't forget to destroy the infrastructure when you're done, to avoid the unnecessary expenses.
 :::
 
 ---
