feat: multi-tenancy article

--- a/docs/key-topics/multi-tenancy.mdx
+++ b/docs/key-topics/multi-tenancy.mdx
@@ -13,8 +13,8 @@ import CenteredImage from "../mdxComponents/centeredImage";
 - how Webiny helps you develop apps to support multi-tenancy
 :::
 
-:::danger Enterprise-only feature
-Multi-tenancy is a feature that requires an enterprise license.
+:::info Webiny Enterprise
+This is a Webiny Enterprise feature. You must have an appropriate license to use the feature. Please contact us at sales@webiny.com for more information or [book a call](https://calendly.com/webiny/30min?month=2021-04).
 :::
 
 Webiny Serverless CMS is designed for multi-tenancy and the framework itself provides a simple SDK to work with tenants.
@@ -23,11 +23,9 @@ In this key topic, we cover what multi-tenancy means and how it helps you to bui
 
 ## What is Multi-Tenancy?
 
-Multi-tenancy is an architecture which allows you to serve multiple customers, called `tenants`, using a single instance (deployment) of your software. It is particularly interesting in the context of _serverless_ since you don't have to worry about scaling your infrastructure as the number of tenants grows.
+Multi-tenancy is an architecture which allows you to serve multiple customers, called `tenants`, using a single instance (deployment) of your software. 
 
-Usually tenants share storage (database). However, they can also have dedicated storage assigned to them in case they're consuming a significant amount of storage compared to other tenants.
-
-In the serverless world, this is less of a problem as databases scale automatically, and you don't need to worry about your shared database running out of storage space.
+Think of a SaaS (Software as a Service) application you may be using: G-Suite, Contentful, even AWS itself. These are all good examples of multi-tenant systems. You have an account (which represents a single user, or an organization), you have your collaborators, and you share some kind of data. Different collaborators have different permissions on the data. All the users of these platforms share the same code base, and it's running on the same hardware.
 
 ## Multi-Tenancy in Webiny
 
@@ -57,7 +55,7 @@ Tenants can have many _users_ assigned to them, and each user can have different
     alt="Tenancy and Users"
 />
 
-And why is all this important? Because when _authorization_ kicks in, we need to be able to provide permissions that an authenticated user has on the given tenant. This is all Webiny needs to work. A tenant id and a set of permissions to be able to perform authorization and business logic checks.
+And why is all this important? Because when _authorization_ kicks in, we need to be able to provide permissions that an authenticated user has on the given tenant. This is all Webiny needs to work. A tenant ID and a set of permissions to be able to perform authorization and business logic checks.
 
 <!-- vale on -->
 
