refactor: relocate theme section

--- a/docs/key-topics/webiny-applications/themes/page-builder/introduction.mdx
+++ b/docs/key-topics/webiny-applications/themes/page-builder/introduction.mdx
@@ -57,14 +57,14 @@ It contains the following elements:
             colors: {
                 primary: "var(--webiny-theme-color-primary)",
                 secondary: "var(--webiny-theme-color-secondary)",
-                //...
+                // (...)
             },
             elements: {
                 button: {
                     types: [
                         { className: "", label: "Default" },
                         { className: "primary", label: "Primary" },
-                        //..
+                        // (...)
                     ]
                 }
             }
@@ -78,8 +78,12 @@ Learn more about the specific theme components:
 - [elements](/docs/key-topics/theme/page-builder/elements)
 
 ### [`pb-page-layout`](/docs/references/page-builder/plugins#pb-page-layout) Plugin
-<!-- TODO: Expand on what is a layout. Say that for example, you might have two layouts.. one with the main menu, the other one with a main menu and additional banner.. or maybe even better.. one layout where the page is rendered in two-columned, the other in three columned layout. -->
+
 The layout plugin is used to register layouts. Layouts are used to render the page content.
+The most commonly used layout includes a header at the top, page content in the center and a footer at the very bottom.
+
+In the Page Builder, you can have multiple layouts. For example, one layout where the page is rendered in two-columned, the other in three columned layout.
+
 Here is an example of how to register a layout:
 
 ```ts title="apps/theme/pageBuilder/index.ts"
@@ -128,11 +132,11 @@ plugins.register([
 ```
 
 After saving the change, your newly registered layout should appear in the Categories form, in the Page Builder application as shown below:
-<!-- TODO: Replace image with a screenshot on a smaller screen size. -->
+
 <!-- vale off -->
 
 <img
-  src={require("../../assets/theme/theme__custom-layout.gif").default}
+  src={require("./images/webiny-page-category.png").default}
   style={{ marginBottom: 20 }}
   alt="New custom layout"
 />
@@ -140,8 +144,7 @@ After saving the change, your newly registered layout should appear in the Categ
 <!-- vale on -->
 
 :::info
-Layouts link to page categories. When you create a page category, say "Blog", you need to select a layout inside which that content display.
-
+In the Page Builder, layouts are linked to page categories. When you create a page category, say "Blog", you need to select a layout.
 Each page created inside the "Blog" category, by default, use that layout. However, inside the page settings, you can overwrite that on a per-page basis if you need to.
 :::
 
