--- a/docs/key-topics/webiny-applications/themes/introduction.mdx
+++ b/docs/key-topics/webiny-applications/themes/introduction.mdx
@@ -20,7 +20,7 @@ Styling is one of the more important tasks you might want to do on a website. Th
 
 Webiny applications, like `Page Builder` and `Form Builder`, support themes and layouts to control the visual presentation of your content. These are implemented as plugins in the [`theme`](https://github.com/webiny/webiny-js/tree/next/apps/theme) package.
 
-There are a few main things you need to understand about Webiny themes. This article will cover these basics concepts.
+There are a few main things you need to understand about Webiny themes. This article covers these basics concepts.
 
 ## There isn't a Single Theme
 
@@ -28,16 +28,21 @@ Webiny doesn't have a concept of a "global" theme that is shared across all appl
 
 With this approach each time you install a new app or a plugin, it automatically comes with all the visuals and layouts you need to start using it immediately.
 
-You have to understand that Webiny is not your basic blogging platform, Webiny is a serverless application framework upon which powerful serverless applications can be built. Those applications might have complex theme requirements. So instead of you going through dozens of files and pasting numerous code snippets in your existing theme, just to get the new app working, this one-theme-per-app concept removes that complexity since every app automatically ships with its own theme package.
+Webiny is a serverless application framework upon which powerful serverless applications can be built. Those applications might have complex theme requirements.
+And, managing CSS styles for those applications within a single theme file doesn't work well most of the time.
+However, this one-theme-per-app concept removes that complexity since every app automatically ships with its own theme package.
 
-As a benefit, each time you update Webiny, or one of its applications or, plugins, you don't need to go through a nerve-racking, nail-biting process of "hoping" that your website will work after the update.
-Because each app update automatically updates the theme just for that app you don't need to worry that there will be incompatibilities between applications on the theme side which cause the website to break.
+As a benefit, each time you update Webiny, or one of its applications or, plugins, you are sure that your website works fine after the update.
+Because each app update automatically updates the theme just for that app you don't need to worry that there are incompatibilities between applications on the theme side which cause the website to break.
 
 ## Registering a Theme
 
 Each theme in Webiny is also a plugin in itself. This means you register it as any other plugin in your applications.
 
-If you open [`apps/admin/code/src/plugins/index.ts`](https://github.com/webiny/webiny-js/blob/next/applications/admin/code/src/plugins/index.ts#L13), in your Webiny project, you notice that say we import the theme styles from the `theme` package as shown below:
+The file located at [`apps/admin/code/src/plugins/index.ts`](https://github.com/webiny/webiny-js/blob/next/apps/admin/code/src/plugins/index.ts#L13)
+contains all the plugins needed for the **Admin Area** project application.
+
+Here we import the theme styles from the `theme` package as shown below:
 
 ```ts
 // Some code is removed for the sake of brevity.
