--- a/docs/tutorials/create-an-application/admin-area-package.mdx
+++ b/docs/tutorials/create-an-application/admin-area-package.mdx
@@ -25,7 +25,7 @@ You will get a set of simple questions to answer and, in the end, a React applic
 
 Also note that in this tutorial we will use `CarManufacturer` as our data model name.
 
-### Running the Scaffold
+## Running the Scaffold
 Run the scaffold command and follow the questions. Select the `Admin Area package` option and let's go through all the questions in detail:
 
 ##### 1. Enter the name of the initial data model
@@ -118,7 +118,7 @@ As in the location step, the value from the first question is used to create the
 
 The default value is `@car-manufacturers/admin-app` as we like scoping packages. You can set it to what ever you want, providing it is passing the validation.
 
-### The Code
+## The Code
 Generated code contains:
 1. `src/views/graphql.ts` with GraphQL queries and mutations for the data model.
 2. `src/views/CarManufacturers.tsx` with a React component that renders both the list view and the form.
@@ -129,7 +129,7 @@ Generated code contains:
 7. `src/types.ts` with interfaces for entry items and data list props.
 8. `src/index.ts` with exports of the plugins to be used in the admin app.
 
-### Using the Generated Code in Your Project
+## Using the Generated Code in Your Project
 In the main admin app file you need to import your package and include it in the plugin registration array.
 ```typescript title="apps/admin/code/src/plugins/index.ts"
 // at the top of the file
@@ -237,7 +237,7 @@ You can even have a watcher running for your code with `yarn webiny ws run watch
 
 Of course, the `folder` value is your package location.
 
-### Run locally
+## Run locally
 Unlike the API, you can run the React application locally:
 1. `cd apps/admin/code`
 2. `yarn start --env=YOUR_ENVIRONMENT`
@@ -245,7 +245,7 @@ Unlike the API, you can run the React application locally:
 This will start the local build of the Admin app. Also, it will automatically rebuild and refresh when it detects changes in the code.
 
 
-### Deploy the Admin App
+## Deploy the Admin App
 To use the generated React application online, you must deploy it. To deploy, use the command:
 ```
 yarn webiny deploy apps/admin --env YOUR_ENVIRONMENT
