fix(create-an-application): url to the react package

--- a/docs/tutorials/create-an-application/api-package.mdx
+++ b/docs/tutorials/create-an-application/api-package.mdx
@@ -366,4 +366,4 @@ You can even have a watcher running for your code with `yarn webiny ws run watch
 Of course, the `folder` value is your package location.
 
 ## Next Step...
-Now that you have a functioning API, let's move onto the [Admin area](./admin-area-package).
+Now that you have a functioning API, let's move onto the [Admin area](/docs/tutorials/create-an-application/admin-area-package).
