fix: update title case

--- a/docs/how-to-guides/headless-cms/rendering-rich-text.mdx
+++ b/docs/how-to-guides/headless-cms/rendering-rich-text.mdx
@@ -38,7 +38,7 @@ Or if you prefer yarn:
 yarn add @webiny/rich-text-renderer
 ```
 
-### Default rendering
+### Default Rendering
 
 Fetch your data from Headless CMS, then pass it to the component like this:
 
@@ -61,7 +61,7 @@ const content = [
 <RichTextRenderer data={content} />;
 ```
 
-### Adding custom renderers
+### Adding Custom Renderers
 
 You can override the default renderers or add new renderers for your custom block types like this:
 
