--- a/docs/how-to-guides/headless-cms/rendering-rich-text.mdx
+++ b/docs/how-to-guides/headless-cms/rendering-rich-text.mdx
@@ -7,7 +7,7 @@ description: Learn how to render rich text content from Headless CMS.
 ---
 
 :::tip What you'll learn
-- how to render rich text content in React
+- how to render rich text content from Headless CMS in React
 :::
 
 ## Overview
