fix: add FAQ section

--- a/docs/how-to-guides/headless-cms/rendering-rich-text.mdx
+++ b/docs/how-to-guides/headless-cms/rendering-rich-text.mdx
@@ -106,3 +106,9 @@ const content = [
 // Mount the component
 <RichTextRenderer data={content} renderers={customRenderers} />;
 ```
+
+## FAQ
+
+#### I'm not using React. How do I render this using other frameworks?
+
+The rendering implementation is really simple and straightforward. You can find the [full code in our repo](https://github.com/webiny/webiny-js/blob/next/packages/rich-text-renderer/src/index.tsx). Using that as a reference, you can quickly put together a renderer in the framework of your choice.
