fix: add section on styling

--- a/docs/how-to-guides/headless-cms/rendering-rich-text.mdx
+++ b/docs/how-to-guides/headless-cms/rendering-rich-text.mdx
@@ -7,8 +7,9 @@ description: Learn how to render rich text content from Headless CMS.
 ---
 
 :::tip What you'll learn
+
 - how to render rich text content from Headless CMS in React
-:::
+  :::
 
 ## Overview
 
@@ -106,6 +107,16 @@ const content = [
 // Mount the component
 <RichTextRenderer data={content} renderers={customRenderers} />;
 ```
+
+## Styling the output
+
+Styles for default renderers are included in the package and you can import them into your app like this:
+
+```scss
+@import "~@webiny/react-rich-text-renderer/styles.scss";
+```
+
+If you don't want to use the default styles, skip this import and implement your own styling.
 
 ## FAQ
 
