fix: update headless cms permission UI images

--- a/docs/key-topics/webiny-applications/headless-cms/graphql-api.mdx
+++ b/docs/key-topics/webiny-applications/headless-cms/graphql-api.mdx
@@ -7,7 +7,8 @@ description: Learn what is the Headless CMS GraphQL API, what are its main chara
 ---
 
 import CenteredImage from "../../../mdxComponents/centeredImage";
-import securityImage from "./graphql-api/security.png";
+import securityImagePart1 from "./graphql-api/security-cms-form-1.png";
+import securityImagePart2 from "./graphql-api/security-cms-form-2.png";
 import apiPlaygroundMainMenu from "./graphql-api/api_playground_from_main_menu.png";
 import apiPlayground from "./graphql-api/api-playground.png";
 import apiUrlWebinyCli from "./graphql-api/api-url-webiny-cli.png";
@@ -23,7 +24,6 @@ import apiPlaygroundSwitchLocale from "./graphql-api/api-playground-switch-local
 ## Overview
 
 The Headless CMS Webiny application comes with a fully-fledged GraphQL API, which you use in order to perform GraphQL queries and mutations on Headless CMS content models, groups, and entries.
-
 
 The easiest way to explore it and try different things is via the API Playground, which's part of the Webiny Administration Area. To access it, simply open the main menu on the left side of the screen, and click on the API Playground:
 
@@ -95,7 +95,12 @@ The Headless CMS GraphQL API sits behind a security layer that provides fine-gra
 - allow users to access only specific Headless CMS GraphQL API types (**manage**, **read**, **preview**)
 - allow users to access only specific content models, groups, and entries
 
-<CenteredImage alt="Fine-grained Access Controls" src={securityImage} />
+<CenteredImage alt="Fine-grained Access Controls" src={securityImagePart1} />
+<CenteredImage
+  alt="Fine-grained Access Controls"
+  src={securityImagePart2}
+  style={{ marginTop: -25 }}
+/>
 
 ## The GraphQL API URL Structure
 
